# watch-list-app

./: .clang-format  .conanrc  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Makefile  conanfile.txt  isort.cfg  manage.py  pylintrc  pyproject.toml  pytest.ini  yapf_style
.github/workflows/: build_checks.yml  release.yml
.run/: runserver.run.xml
cmake/: cmake-utils.cmake  generate-server-settings-schema.cmake  iwyu.cmake
config/: settings-schema.json  settings.json
include/watch-list-server/: dev-utils.hpp  formatter-utils.hpp  http-utils.hpp  pistache_utils.hpp  server-constants.hpp  server-error.hpp  server-generic-error.hpp  server-listener.hpp  server-logger.hpp  server-routes.hpp  server-settings-schema.hpp.in
include/watch-list-server/dal/: database-builder.hpp  database-json.hpp  database.hpp
include/watch-list-server/handlers/: handler-base.hpp  handler-error.hpp  handler-exception.hpp  handler-health-check.hpp  handler-index.hpp  handler-request-error.hpp  handler-timer.hpp  handler-traits.hpp  handler-users.hpp
include/watch-list-server/json/: json-utils.hpp
include/watch-list-server/middleware/: middleware-base.hpp  request-logger-middleware.hpp
include/watch-list-server/models/: base-model.hpp  genre-model.hpp  model-exception.hpp  model-traits.hpp  user-model.hpp  utils.hpp
include/watch-list-server/settings/: server-settings-loader.hpp  server-settings-models.hpp  server-settings.hpp
rest_api/: admin.py  urls.py
rest_api/migrations/: 0001_initial.py  0002_watchlist_watchlist_unique_user_name.py  0003_watchlist_date_created_watchlist_date_modified.py
rest_api/models/: __init__.py  user.py  watch_list.py
rest_api/tests/helpers/: __init__.py  datetime_helper.py  fixture_types.py  test_case_helper.py
rest_api/tests/unittests/: conftest.py  test_models.py  test_users_view.py  test_watch_lists_view.py
rest_api/views/: __init__.py  sessions.py  users.py  watch_lists.py
src/: main.cpp  server-generic-error.cpp  server-listener.cpp  server-logger.cpp
src/dal/: database-json.cpp  database.cpp
src/handlers/: handler-base.cpp  handler-error.cpp  handler-health-check.cpp  handler-index.cpp  handler-users.cpp
src/models/: base-model.cpp  user-model.cpp
src/settings/: server-settings-loader.cpp  server-settings.cpp
tools/: get_project_version.py
unittests/: CMakeLists.txt
unittests/src/: main.cpp
watch_list_app/: asgi.py  server_constants.py  settings.py  test_runner.py  urls.py  wsgi.py
watch_list_app/middleware/: __init__.py  login_required_middleware.py
watch_list_common/: pyproject.toml
watch_list_common/datetime_utils/: __init__.py  datetime_utils.py
watch_list_common/django_utils/: __init__.py  django_settings_hook.py
watch_list_common/http_utils/: __init__.py  requests.py  responses.py
watch_list_common/pydantic_utils/: __init__.py  model_utils.py  models.py
watch_list_common/utils/: __init__.py  singleton.py  utils.py
