[tool.poetry]
name = "watch-list-app"
version = "0.0.1"
description = "N/A"
authors = ["SheyDenis <denis.sheyer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
conan = "^2.0.16"
pre-commit = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
