[tool.poetry]
name = "watch-list-app"
version = "0.0.1"
description = "N/A"
authors = ["SheyDenis <denis.sheyer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

Django = "~5.0.0"
overrides = "*"
pre-commit = "*"
python-dotenv = "*"

[tool.poetry.group.dev.dependencies]
isort = "*"
pydantic = "*"
pylint = "*"
pytest = "*"
xenon = "*"
yapf = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
