[tool.poetry]
name = "watch-list-app"
version = "0.0.2"
description = "N/A"
authors = ["SheyDenis <denis.sheyer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

watch-list-common = { path = "watch_list_common/", develop = true }

Django = "~5.0.0"
overrides = "*"
pre-commit = "*"
pydantic = { version = "*", extras = ["email"] }
python-dotenv = "*"

[tool.poetry.group.dev.dependencies]
isort = "*"
pylint = "*"
pytest = "*"
pytest-django = "*"
xenon = "*"
yapf = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
