[tool.poetry]
name = "watch-list-common"
version = "1.0.0"
description = "Common utilities for the project"
authors = ["SheyDenis <denis.sheyer@gmail.com>"]

packages = [{include = "utils"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
